--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kode+Mono&family=Poppins&family=Roboto+Mono&display=swap" rel="stylesheet">
 
-    <title>Shopper</title>
+    <title>Another Story</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
